Renamed the node UI params

--- a/nodes/klicktipp-field-index.html
+++ b/nodes/klicktipp-field-index.html
@@ -16,7 +16,7 @@
 	    <dd>
 		   On success:
 		   <ul>
-			   <li>A list of contact fields retrieved from the API.</li>
+			   <li>A list of data fields retrieved from the API.</li>
 		   </ul>
 	   	</dd>
 	   	<dd>
@@ -32,8 +32,8 @@
 
 	<h3>Node Status</h3>
 	<ul>
-	    <li><strong>Green (dot)</strong> - Successfully fetched the contact fields.</li>
-	    <li><strong>Red (ring)</strong> - Failed to fetch contact fields (e.g., invalid session data or API error).</li>
+	    <li><strong>Green (dot)</strong> - Successfully fetched the data fields.</li>
+	    <li><strong>Red (ring)</strong> - Failed to fetch data fields (e.g., invalid session data or API error).</li>
 	</ul>
 </script>
 
