--- a/nodes/klicktipp-subscription-process-index.html
+++ b/nodes/klicktipp-subscription-process-index.html
@@ -16,7 +16,7 @@
 		<dd>
 			On success:
 			<ul>
-				<li>An associative array where each key is the list ID, and the value is the subscription process name.</li>
+				<li>An associative array where each key is the list ID, and the value is the opt-in process name.</li>
 			</ul>
 		</dd>
 		<dd>
@@ -32,8 +32,8 @@
 
 	  <h3>Node Status</h3>
 	  <ul>
-	   <li><strong>Green (dot)</strong> - Subscription processes fetched successfully.</li>
-	   <li><strong>Red (ring)</strong> - Failed to fetch subscription processes due to an error.</li>
+	   <li><strong>Green (dot)</strong> - Opt-in processes fetched successfully.</li>
+	   <li><strong>Red (ring)</strong> - Failed to fetch opt-in processes due to an error.</li>
 	  </ul>
 </script>
 
