--- a/nodes/klicktipp-subscriber-signin.html
+++ b/nodes/klicktipp-subscriber-signin.html
@@ -9,18 +9,18 @@
 	    <input type="hidden" id="node-input-apiKeyType">
 	</div>
 	<div class="form-row">
-	    <label for="node-input-email"><i class="fa fa-envelope"></i> <span>Email</span></label>
+	    <label for="node-input-email"><i class="fa fa-envelope"></i> <span>Email address</span></label>
 	    <input type="text" id="node-input-email" placeholder="Enter email address">
 	    <input type="hidden" id="node-input-emailType">
 	</div>
 	<div class="form-row">
-	    <label for="node-input-smsNumber"><i class="fa fa-mobile"></i> <span>SMS Number</span></label>
+	    <label for="node-input-smsNumber"><i class="fa fa-mobile"></i> <span>SMS number</span></label>
 	    <input type="text" id="node-input-smsNumber" placeholder="Enter SMS number (optional)">
 	    <input type="hidden" id="node-input-smsNumberType">
 	</div>
 	<div class="form-row">
-	    <label for="node-input-fields"><i class="fa fa-list"></i> <span>Contact fields</span></label>
-	    <input type="text" id="node-input-fields" placeholder="Contact fields">
+	    <label for="node-input-fields"><i class="fa fa-list"></i> <span>Data fields</span></label>
+	    <input type="text" id="node-input-fields" placeholder="Data fields">
 	    <input type="hidden" id="node-input-fieldsType">
 	</div>
 	<div id="contact-fields-section" class="form-row" style="display: none"></div>
