--- a/nodes/klicktipp-subscriber-signout.html
+++ b/nodes/klicktipp-subscriber-signout.html
@@ -5,7 +5,7 @@
 	       <input type="hidden" id="node-input-apiKeyType">
 	   </div>
 	   <div class="form-row">
-	       <label for="node-input-email"><i class="fa fa-envelope"></i> <span>Email</span></label>
+	       <label for="node-input-email"><i class="fa fa-envelope"></i> <span>Email address</span></label>
 	       <input type="text" id="node-input-email" placeholder="Enter email address">
 	       <input type="hidden" id="node-input-emailType">
 	   </div>
