--- a/nodes/klicktipp-subscriber-subscribe.html
+++ b/nodes/klicktipp-subscriber-subscribe.html
@@ -135,20 +135,20 @@
 		labelStyle: "klicktipp_label_style",
 		paletteLabel: 'Subscriber subscribe',
 		oneditprepare: function() {
-			// Declare common variables at the node level so both functions can access them
+			console.log('Subscribe ID:', this.id);
+
 			this.tagDropdown = $('#node-input-tagId');
 			this.listIdDropdown = $('#node-input-listId');
 			this.contactListContainer = $('#contact-fields-section');
 			const fieldsInput = $("#node-input-fields");
 
-			ktPopulateDropdown(this.tagDropdown, this.tagId, '/klicktipp/tags/subscriber-subscribe-node');
-			ktPopulateDropdown(this.listIdDropdown, this.listId, '/klicktipp/subscription-processes/subscriber-subscribe-node');
-
 			ktInitializeTypedInput("#node-input-email", "#node-input-emailType", 'str', ['str']);
 			ktInitializeTypedInput("#node-input-smsNumber", "#node-input-smsNumberType", 'str', ['str']);
 			ktInitializeTypedInput("#node-input-fields", "#node-input-fieldsType", 'msg', ['json', KT_CUSTOM_CONTACT_FIELDS_TYPE]);
 
-			ktHandleContactFieldsDisplay(this.contactListContainer, fieldsInput, 'subscriber-subscribe-node', this.fieldsData);
+			ktPopulateDropdown(this.tagDropdown, this.tagId, `/klicktipp/tags/${this.id}`);
+			ktPopulateDropdown(this.listIdDropdown, this.listId, `/klicktipp/subscription-processes/${this.id}`);
+			ktHandleContactFieldsDisplay(this.contactListContainer, fieldsInput, this.id, this.fieldsData);
 		},
 		oneditsave: function() {
 			// Use the previously set common variables
