--- a/nodes/klicktipp-subscription-process-get-redirect.html
+++ b/nodes/klicktipp-subscription-process-get-redirect.html
@@ -91,7 +91,7 @@
 		paletteLabel: 'Opt-in process redirect URL',
 		oneditprepare: function() {
 			const listIdDropdown = $('#node-input-listId');
-			ktPopulateDropdown(listIdDropdown, this.listId, '/klicktipp/subscription-process/get-redirect-node');
+			ktPopulateDropdown(listIdDropdown, this.listId, `/klicktipp/subscription-process/${this.id}`);
 			ktInitializeTypedInput("#node-input-email", "#node-input-emailType", 'str', ['str']);
 		},
 		// When the node editor is saved, capture the selected tagId
