fix: update doc

--- a/nodes/klicktipp-subscriber-get.html
+++ b/nodes/klicktipp-subscriber-get.html
@@ -21,9 +21,9 @@
 	<dl class="message-properties">
 	    <dt>msg.payload <span class="property-type">object</span></dt>
 	    <dd>
-	        Expected object with the following properties
+	        Expected object with the following properties:
 	        <ul>
-	            <li><code>subscriberId</code> - subscriberId – (Required) the subscriber's ID</li>
+	            <li><code>subscriberId</code> - (Required) the subscriber's ID</li>
 	        </ul>
 	    </dd>
 	</dl>
