--- a/nodes/klicktipp-subscriber-index.html
+++ b/nodes/klicktipp-subscriber-index.html
@@ -10,6 +10,8 @@
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp-subscriber-index">
+	<p>Returns an associative array <code>[id] => [subscriber_id]</code> of all active subscribers. Use the <code>Subscriber get</code> node to retrieve detailed information about a subscriber.</p>
+
 	<h3>Outputs</h3>
 	<dl class="message-properties">
 	   <dt>msg.payload <span class="property-type">object</span></dt>
