--- a/nodes/klicktipp-subscriber-signin.html
+++ b/nodes/klicktipp-subscriber-signin.html
@@ -42,7 +42,8 @@
 			   <li><code>apiKey</code> - (Required) the API key for authentication</li>
 			   <li><code>email</code> - (Required) the subscriber's email address</li>
 			   <li><code>smsNumber</code> - (Optional) the subscriber's mobile number</li>
-			   <li><code>fields</code> - (Optional) an object with data fields (e.g., first name, last name, address, etc.), structured as returned by the field_index node</li>
+			   <li><code>fields</code> - (Optional) an object with data fields (e.g., first name, last name, address, etc.),
+			   structured as returned by the <code>Field index</code> node</li>
 		   </ul>
 	   </dd>
 	</dl>
