--- a/nodes/klicktipp-subscriber-signoff.html
+++ b/nodes/klicktipp-subscriber-signoff.html
@@ -24,8 +24,8 @@
 	   <dd>
 		   Expected object with the following properties:
 		   <ul>
-			   <li><code>apiKey</code> - (Required) The API key for authentication.</li>
-			   <li><code>email</code> - (Required) The email address of the subscriber to unsubscribe.</li>
+			   <li><code>apiKey</code> - (Required) The API key for authentication</li>
+			   <li><code>email</code> - (Required) (Required) the subscriber's email address</li>
 		   </ul>
 	   </dd>
    </dl>
