--- a/nodes/klicktipp-subscriber-signout.html
+++ b/nodes/klicktipp-subscriber-signout.html
@@ -25,7 +25,7 @@
 		   Expected object with the following properties:
 		   <ul>
 			   <li><code>apiKey</code> - (Required) the API key for authentication</li>
-			   <li><code>email</code> - (Required) (Required) the subscriber's email address</li>
+			   <li><code>email</code> - (Required) the subscriber's email address</li>
 		   </ul>
 	   </dd>
    </dl>
