--- a/nodes/klicktipp-subscriber-unsubscribe.html
+++ b/nodes/klicktipp-subscriber-unsubscribe.html
@@ -21,7 +21,7 @@
 	<dl class="message-properties">
 	    <dt>msg.payload <span class="property-type">object</span></dt>
 	    <dd>
-	        Expected object with the following properties
+	        Expected object with the following properties:
 	        <ul>
 	            <li><code>email</code> - (Required) the subscriber's email address</li>
 	        </ul>
