--- a/nodes/klicktipp-subscription-process-get.html
+++ b/nodes/klicktipp-subscription-process-get.html
@@ -20,7 +20,7 @@
 	<dl class="message-properties">
 	<dt>msg.payload<span class="property-type">object</span></dt>
 	<dd>
-	   An object that must contain the following:
+	   Expected object with the following properties:
 	   <ul>
 		   <li><code>listId</code> - (Required) the ID of a opt-in process</li>
 	   </ul>
