--- a/nodes/klicktipp-subscription-process-index.html
+++ b/nodes/klicktipp-subscription-process-index.html
@@ -10,6 +10,7 @@
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp-subscription-process-index">
+	<p>Returns an associative array <code>[double_optin_process_id] => [double_optin_process_name]</code> of all opt-in processes.</p>
 	<h3>Outputs</h3>
 	<dl class="message-properties">
 		<dt>msg.payload <span class="property-type">object</span></dt>
