--- a/nodes/klicktipp-tag-create.html
+++ b/nodes/klicktipp-tag-create.html
@@ -26,7 +26,7 @@
 	<dl class="message-properties">
 	    <dt>msg.payload <span class="property-type">object</span></dt>
 	    <dd>
-	        Expected object with the following properties
+	        Expected object with the following properties:
 	        <ul>
 	            <li><code>name</code> - (Required) the name of the manual tag</li>
 	            <li><code>text</code> - (Optional) the description of the manual tag</li>
