--- a/nodes/klicktipp-tag-index.html
+++ b/nodes/klicktipp-tag-index.html
@@ -10,6 +10,8 @@
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp-tag-index">
+	<p>Returns an associative array <code>[tag_id] => [tag_name]</code> of all manual tags and SmartLinks.
+	Use the <code>Tag get</code> node to retrieve the name and description of a tag.</p>
 	<h3>Outputs</h3>
 	<dl class="message-properties">
 		<dt>msg.payload <span class="property-type">object</span></dt>
