--- a/nodes/klicktipp-subscriber-search.html
+++ b/nodes/klicktipp-subscriber-search.html
@@ -15,15 +15,15 @@
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp-subscriber-search">
-	<p>Returns the subscriber ID for an email address. Use the subscriber_get node to retrieve detailed information about this subscriber.</p>
+	<p>Returns the subscriber ID for an email address. Use the <code>Subscriber get</code> node to retrieve detailed information about this subscriber.</p>
 
 	<h3>Inputs</h3>
 	<dl class="message-properties">
 	    <dt>msg.payload <span class="property-type">object</span></dt>
 	    <dd>
-	        Expected object with the following properties
+	        Expected object with the following properties:
 	        <ul>
-	            <li><code>email</code> - (Required) the ID of a manual tag or SmartLink</li>
+	            <li><code>email</code> - (Required) the subscriber's email address</li>
 	        </ul>
 	    </dd>
 	</dl>
