--- a/nodes/klicktipp-subscriber-subscribe.html
+++ b/nodes/klicktipp-subscriber-subscribe.html
@@ -44,13 +44,14 @@
 	<dl class="message-properties">
 	    <dt>msg.payload <span class="property-type">object</span></dt>
 	    <dd>
-	        Expected object with the following properties
+	        Expected object with the following properties:
 	        <ul>
 	            <li><code>email</code> - (Required) the subscriber's email address</li>
 	            <li><code>smsNumber</code> -(Optional) the subscriber's mobile number</li>
 	            <li><code>listId</code> - (Optional) the ID of a opt-in process</li>
 	            <li><code>tagId</code> - (Optional) the ID of a manual tag or SmartLink</li>
-	            <li><code>fields</code> - (Optional) an object with data fields (e.g., first name, last name, address, etc.), structured as returned by the field_index node</li>
+	            <li><code>fields</code> - (Optional) an object with data fields (e.g., first name, last name, address, etc.),
+	            structured as returned by the <code>Field index</code> node</li>
 	        </ul>
 	    </dd>
 	</dl>
