--- a/nodes/klicktipp-subscriber-tag.html
+++ b/nodes/klicktipp-subscriber-tag.html
@@ -25,7 +25,7 @@
 	<dl class="message-properties">
 	    <dt>msg.payload <span class="property-type">object</span></dt>
 	    <dd>
-	        Expected object with the following properties
+	        Expected object with the following properties:
 	        <ul>
 	            <li><code>email</code> - (Required) the subscriber's email address</li>
 	            <li><code>tagIds</code> - (Required) The ID of a manual tag or SmartLink.
