--- a/nodes/klicktipp-subscriber-tagged.html
+++ b/nodes/klicktipp-subscriber-tagged.html
@@ -16,15 +16,16 @@
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp-subscriber-tagged">
-	<p>Returns an associative array [subscriber_id] => [subscription_timestamp] of subscribers who have been tagged with a specific tag. Use the subscriber_get node to retrieve detailed information about a subscriber.</p>
+	<p>Returns an associative array <code>[subscriber_id] => [subscription_timestamp]</>code> of subscribers
+	who have been tagged with a specific tag. Use the <code>Subscriber get</code> node to retrieve detailed information about a subscriber.</p>
 
 	<h3>Inputs</h3>
 	<dl class="message-properties">
 	    <dt>msg.payload <span class="property-type">object</span></dt>
 	    <dd>
-	        Expected object with the following properties
+	        Expected object with the following properties:
 	        <ul>
-	            <li><code>tagId</code> - Required) the ID of a manual tag or SmartLink</li>
+	            <li><code>tagId</code> - (Required) the ID of a manual tag or SmartLink</li>
 	        </ul>
 	    </dd>
 	</dl>
