--- a/nodes/klicktipp-subscriber-untag.html
+++ b/nodes/klicktipp-subscriber-untag.html
@@ -27,7 +27,7 @@
 	<dl class="message-properties">
 	    <dt>msg.payload <span class="property-type">object</span></dt>
 	    <dd>
-	        Expected object with the following properties
+	        Expected object with the following properties:
 	        <ul>
 	            <li><code>email</code> - (Required) the subscriber's email address</li>
 	            <li><code>tagId</code> - (Required) the ID of a manual tag or SmartLink</li>
