--- a/nodes/klicktipp-subscriber-update.html
+++ b/nodes/klicktipp-subscriber-update.html
@@ -37,10 +37,11 @@
 	<dl class="message-properties">
 	    <dt>msg.payload <span class="property-type">object</span></dt>
 	    <dd>
-	        Expected object with the following properties::
+	        Expected object with the following properties:
 	        <ul>
 	            <li><code>subscriberId</code> - (Required) the subscriber's ID</li>
-	            <li><code>fields</code> - (Optional) an object with data fields (e.g., first name, last name, address, etc.), structured as returned by the <code>field_index</code> node</li>
+	            <li><code>fields</code> - (Optional) an object with data fields (e.g., first name, last name, address, etc.),
+	            structured as returned by the <code>Field index</code> node</li>
 	            <li><code>newEmail</code> - (Optional) the subscriber's new email address</li>
 	            <li><code>newSmsNumber</code> - (Optional) the subscriber's new mobile number</li>
 	        </ul>
