--- a/nodes/klicktipp-subscription-process-get-redirect.html
+++ b/nodes/klicktipp-subscription-process-get-redirect.html
@@ -25,7 +25,7 @@
 	<dl class="message-properties">
 	<dt>msg.payload <span class="property-type">object</span></dt>
 	<dd>
-	   Expected object with the following properties
+	   Expected object with the following properties:
 	   <ul>
 		   <li><code>listId</code> - (Required) the ID of a opt-in process</li>
 		   <li><code>email</code> - (Required) the subscriber's email address</li>
