--- a/nodes/klicktipp-tag-update.html
+++ b/nodes/klicktipp-tag-update.html
@@ -32,7 +32,7 @@
 	<dl class="message-properties">
 	    <dt>msg.payload <span class="property-type">object</span></dt>
 	    <dd>
-	        Expected object with the following properties::
+	        Expected object with the following properties:
 	        <ul>
 	            <li><code>tagId</code> - (Required) the ID of the tag</li>
 	            <li><code>name</code> - (Optional) the new name of the manual tag</li>
