fix: Fixed typo

--- a/nodes/klicktipp-subscriber-tagged.html
+++ b/nodes/klicktipp-subscriber-tagged.html
@@ -16,7 +16,7 @@
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp-subscriber-tagged">
-	<p>Returns an associative array <code>[subscriber_id] => [subscription_timestamp]</>code> of subscribers
+	<p>Returns an associative array <code>[subscriber_id] => [subscription_timestamp]</code> of subscribers
 	who have been tagged with a specific tag. Use the <code>Subscriber get</code> node to retrieve detailed information about a subscriber.</p>
 
 	<h3>Inputs</h3>
