--- a/nodes/klicktipp-subscriber-signoff.html
+++ b/nodes/klicktipp-subscriber-signoff.html
@@ -63,22 +63,24 @@
 		color: '#1B2C3D',
 		defaults: {
 			apiKey: {
-				value: '',
+				value: 'payload.apiKey',
 				required: true,
 				validate: RED.validators.typedInput('apiKeyType')
 			},
 			apiKeyType: {
-				value: 'str'
+				value: 'msg'
 			},
 			email: {
-				value: '',
+				value: 'payload.email',
 				required: true,
 				validate: RED.validators.typedInput('emailType')
 			},
 			emailType: {
-				value: 'str'
+				value: 'msg'
 			},
-			name: { value: '' },
+			name: {
+				value: ''
+			},
 		},
 		inputs: 1,
 		outputs: 1,
