--- a/nodes/klicktipp-subscription-process-get-redirect.html
+++ b/nodes/klicktipp-subscription-process-get-redirect.html
@@ -67,19 +67,21 @@
 		defaults: {
 			klicktipp: { type: 'klicktipp-config', required: true },
 			email: {
-				value: '',
+				value: 'payload.email',
 				required: true,
 				validate: RED.validators.typedInput('emailType')
 			},
 			emailType: {
-				value: 'str'
+				value: 'msg'
 			},
 			listId: {
 				value: '',
 				required: true,
 				validate: RED.validators.number()
 			},
-			name: { value: '' },
+			name: {
+				value: ''
+			},
 		},
 		inputs: 1,
 		outputs: 1,
