--- a/nodes/klicktipp-resend-autoresponder.html
+++ b/nodes/klicktipp-resend-autoresponder.html
@@ -98,22 +98,19 @@
 			ktInitializeTypedInput("#node-input-email", "#node-input-emailType", 'str', ['str']);
 			ktInitializeTypedInput("#node-input-autoresponderId", "#node-input-autoresponderTypeId", 'num', ['num']);
 
-			var values = $('#node-input-klicktipp').map(function() {
-				return $(this).val();
-			}).get();
-
-			console.log({values})
-
-			// Check if a klicktipp-config node exists
-			if (!$("#node-input-klicktipp").val()) {
-				var configs = RED.nodes.filterNodes(function(node) {
-					return node.type === "klicktipp-config";
-				});
-				console.log(RED.nodes);
-				if (configs.length > 0) {
-					// Assign the first available klicktipp-config node
-					$("#node-input-klicktipp").val(configs[0].id);
+			var configs = [];
+			RED.nodes.eachConfig(function(node) {
+				if (node.type === "klicktipp-config") {
+					configs.push(node);
 				}
+			});
+
+			// Get the first available config if it exists
+			const firstAvailableConfig = configs.length > 0 ? configs[0] : null;
+
+			// Set the value of #node-input-klicktipp to the first available config ID if it doesn't already have a value
+			if (firstAvailableConfig) {
+				$("#node-input-klicktipp").val(firstAvailableConfig.id);
 			}
 		},
 	});
