--- a/nodes/klicktipp-subscriber-tagged.html
+++ b/nodes/klicktipp-subscriber-tagged.html
@@ -6,7 +6,7 @@
     <div class="form-row">
         <label for="node-input-tagId"><i class="fa fa-tag"></i> <span>Tag</span></label>
         <select id="node-input-tagId">
-            <!-- Tags will be populated here -->
+            <option value="">-- Select Tag (Required) --</option>
         </select>
     </div>
 	<div class="form-row">
