--- a/nodes/klicktipp-tag-delete.html
+++ b/nodes/klicktipp-tag-delete.html
@@ -6,7 +6,7 @@
     <div class="form-row">
         <label for="node-input-tagId"><i class="fa fa-tag"></i> <span>Tag</span></label>
         <select id="node-input-tagId">
-            <!-- Tags will be populated here -->
+            <option value="">-- Select Tag (Required) --</option>
         </select>
     </div>
 	<div class="form-row">
@@ -63,7 +63,7 @@
 		defaults: {
 			klicktipp: { type: 'klicktipp-config', required: true },
 			tagId: {
-				value: 0,
+				value: '',
 				validate: RED.validators.number()
 			},
 			name: {
