fix: add the disabled attr for required params

--- a/nodes/klicktipp-subscription-process-get-redirect.html
+++ b/nodes/klicktipp-subscription-process-get-redirect.html
@@ -6,7 +6,7 @@
 	<div class="form-row">
         <label for="node-input-listId"><i class="fa fa-tags""></i> <span>Opt-in process</span></label>
         <select id="node-input-listId">
-        	<option value="">-- Select Opt-in Process (Required) --</option>
+        	<option disabled value="">-- Select Opt-in Process (Required) --</option>
         </select>
     </div>
 	<div class="form-row">
