--- a/nodes/klicktipp-subscriber-untag.html
+++ b/nodes/klicktipp-subscriber-untag.html
@@ -11,7 +11,7 @@
     <div class="form-row">
         <label for="node-input-tagId"><i class="fa fa-tag"></i> <span>Tag</span></label>
         <select id="node-input-tagId">
-        	<option value="">-- Select Tag (Required) --</option>
+        	<option disabled value="">-- Select Tag (Required) --</option>
         </select>
     </div>
 	<div class="form-row">
