fix: removed unused options

--- a/nodes/klicktipp-subscriber-subscribe.html
+++ b/nodes/klicktipp-subscriber-subscribe.html
@@ -15,15 +15,11 @@
 	</div>
 	<div class="form-row">
         <label for="node-input-listId"><i class="fa fa-tags""></i> <span>Opt-in process</span></label>
-        <select id="node-input-listId">
-            <option value="">-- Select Opt-in Process (Optional) --</option>
-        </select>
+        <select id="node-input-listId"></select>
     </div>
     <div class="form-row">
         <label for="node-input-tagId"><i class="fa fa-tag"></i> <span>Tag</span></label>
-        <select id="node-input-tagId">
-            <option value="">-- Select Tag (Optional) --</option>
-        </select>
+        <select id="node-input-tagId"></select>
     </div>
 	<div class="form-row">
 	    <label for="node-input-fields"><i class="fa fa-list"></i> <span>Data fields</span></label>
