--- a/nodes/klicktipp-subscription-process-get-redirect.html
+++ b/nodes/klicktipp-subscription-process-get-redirect.html
@@ -5,9 +5,7 @@
 	</div>
 	<div class="form-row">
         <label for="node-input-listId"><i class="fa fa-tags""></i> <span>Opt-in process</span></label>
-        <select id="node-input-listId">
-        	<option disabled value="">-- Select Opt-in Process (Required) --</option>
-        </select>
+        <select id="node-input-listId"></select>
     </div>
 	<div class="form-row">
 	    <label for="node-input-email"><i class="fa fa-envelope"></i> <span>Email address</span></label>
