feat: add the kicktipp config autopopulation

--- a/nodes/klicktipp-field-index.html
+++ b/nodes/klicktipp-field-index.html
@@ -53,6 +53,9 @@
 			return this.name || 'Field index';
 		},
 		labelStyle: "klicktipp_label_style",
-		paletteLabel: 'Field index'
+		paletteLabel: 'Field index',
+		onadd: function() {
+			ktPopulateConfig(this);
+		},
 	});
 </script>
