--- a/nodes/klicktipp-tag-index.html
+++ b/nodes/klicktipp-tag-index.html
@@ -55,5 +55,8 @@
 		},
 		labelStyle: "klicktipp_label_style",
 		paletteLabel: 'Tag index',
+		onadd: function() {
+			ktPopulateConfig(this);
+		},
 	});
 </script>
