--- a/nodes/klicktipp-subscriber-delete.html
+++ b/nodes/klicktipp-subscriber-delete.html
@@ -80,6 +80,9 @@
 		},
 		labelStyle: "klicktipp_label_style",
 		paletteLabel: 'Subscriber delete',
+		onadd: function() {
+			ktPopulateConfig(this);
+		},
 		oneditprepare: function() {
 			ktInitializeTypedInput("#node-input-subscriberId", "#node-input-subscriberIdType", 'num', ['num']);
 		},
