--- a/nodes/klicktipp-subscriber-unsubscribe.html
+++ b/nodes/klicktipp-subscriber-unsubscribe.html
@@ -81,6 +81,9 @@
 		},
 		labelStyle: "klicktipp_label_style",
 		paletteLabel: 'Subscriber unsubscribe',
+		onadd: function() {
+			ktPopulateConfig(this);
+		},
 		oneditprepare: function() {
 			ktInitializeTypedInput("#node-input-email", "#node-input-emailType", 'str', ['str']);
 		},
